# Search_in_files

./: CMakeLists.txt  README.md  config.json  requests.json
include/: ConverterJSON.h  Exception.h  InvertedIndex.h  Search.hpp  SearchServer.h  Version.h
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt
test/TestInvertedIndex/: CMakeLists.txt  TestInvertedIndex.cpp
test/TestSearchServer/: CMakeLists.txt  TestSearchServer.cpp
